LRIS-27116 format-source